--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,8 @@
 .mask {
     width: 300px;
     height: 300px;
-    background-image: url(../image/2.jpg);
-    /* background: rgba(225, 225, 225, 0.7); */
+    /* background-image: url(../image/2.jpg);*/
+    background: rgba(225, 225, 225, 0.7); 
     position: fixed;
     left: 40%;
     top: 20%;
